# fallout-instruct

./: pyproject.toml  scrape.py
configs/: pretrain.json  train.json
src/fallout_instruct/: clean_wikia_dump.py  pretrain.py  scrape.py  train.py
