[project]
name = "fallout-instruct"
version = "0.1.0"
description = "Training a Fallout Instruct model."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "beautifulsoup4>=4.13.4",
    "requests>=2.32.3",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
scrape="fallout_instruct.scrape:main"
