[project]
name = "fallout-instruct"
version = "0.1.0"
description = "Training a Fallout Instruct model."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.8.1",
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "beautifulsoup4>=4.13.4",
    "bitsandbytes>=0.46.1",
    "click>=8.2.1",
    "datasets>=3.6.0",
    "evaluate>=0.4.4",
    "jupyter>=1.1.1",
    "peft>=0.16.0",
    "requests>=2.32.3",
    "standard-imghdr>=3.13.0",
    "tenacity>=9.1.2",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
scrape="fallout_instruct.scrape:main"
train="fallout_instruct.train:main"
